updating fetch API

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     </div>
     <h4>Current Forecast For<span></span></h4>
     <div class="currentForecast">
+        <div id="name"></div>
+        <div id="temp"></div>
+        <div id="wind"></div>
+        <div id="humidity"></div>
+        <div id="uv"></div>
     </div>
     <h4>Five Day Forecast For<span></span></h4>
     <div class="fiveDayForecast">
