adding content to five day forecast

--- a/index.html
+++ b/index.html
@@ -28,15 +28,45 @@
     </div>
     <h4>Five Day Forecast For<span></span></h4>
     <div class="fiveDayForecast">
-        <div class="fiveDay" id="dayOne">Monday</div>
-        <div class="fiveDay" id="dayTwo">Tuesday</div>
-        <div class="fiveDay" id="dayThree">Wednesday</div>
-        <div class="fiveDay" id="dayFour">Thursday</div>
-        <div class="fiveDay" id="dayFive">Friday</div>
+        <div class="fiveDay" id="dayOneDiv">
+            <div id="dayOne"></div>
+            <img src="" id="iconOne">
+            <div id="tempOne"></div>
+            <div id="windOne"></div>
+            <div id="humidityOne"></div>
+        </div>
+        <div class="fiveDay" id="dayTwoDiv">
+            <div id="dayTwo"></div>
+            <div id="iconTwo"></div>
+            <div id="tempTwo"></div>
+            <div id="windTwo"></div>
+            <div id="humidityTwo"></div>
+        </div>        
+        <div class="fiveDay" id="dayThreeDiv">
+            <div id="dayThree"></div>
+            <div id="iconThree"></div>
+            <div id="tempThree"></div>
+            <div id="windThree"></div>
+            <div id="humidityThree"></div>
+        </div>       
+        <div class="fiveDay" id="dayFourDiv">
+            <div id="dayFour"></div>
+            <div id="iconFour"></div>
+            <div id="tempFour"></div>
+            <div id="windFour"></div>
+            <div id="humidityFour"></div>
+        </div>
+        <div class="fiveDay" id="dayFiveDiv">
+            <div id="dayFive"></div>
+            <div id="iconFive"></div>
+            <div id="tempFive"></div>
+            <div id="windFive"></div>
+            <div id="humidityFive"></div>
+        </div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 <script src="assets/js/javascript.js"></script>
 </html>
