added content to all five day divs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="previousSearch">
         <ul class="previousSearchList"></ul>
     </div>
-    <h4>Current Forecast For<span></span></h4>
+    <h4>Current Forecast</h4>
     <div class="currentForecast">
         <div id="name"></div>
         <div id="temp"></div>
@@ -26,7 +26,7 @@
         <div id="humidity"></div>
         <div id="uv"></div>
     </div>
-    <h4>Five Day Forecast For<span></span></h4>
+    <h4>Five Day Forecast</h4>
     <div class="fiveDayForecast">
         <div class="fiveDay" id="dayOneDiv">
             <div id="dayOne"></div>
@@ -37,28 +37,28 @@
         </div>
         <div class="fiveDay" id="dayTwoDiv">
             <div id="dayTwo"></div>
-            <div id="iconTwo"></div>
+            <img src="" id="iconTwo">
             <div id="tempTwo"></div>
             <div id="windTwo"></div>
             <div id="humidityTwo"></div>
         </div>        
         <div class="fiveDay" id="dayThreeDiv">
             <div id="dayThree"></div>
-            <div id="iconThree"></div>
+            <img src="" id="iconThree">
             <div id="tempThree"></div>
             <div id="windThree"></div>
             <div id="humidityThree"></div>
         </div>       
         <div class="fiveDay" id="dayFourDiv">
             <div id="dayFour"></div>
-            <div id="iconFour"></div>
+            <img src="" id="iconFour">
             <div id="tempFour"></div>
             <div id="windFour"></div>
             <div id="humidityFour"></div>
         </div>
         <div class="fiveDay" id="dayFiveDiv">
             <div id="dayFive"></div>
-            <div id="iconFive"></div>
+            <img src="" id="iconFive">
             <div id="tempFive"></div>
             <div id="windFive"></div>
             <div id="humidityFive"></div>
