moving variables around

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <h4>Five Day Forecast</h4>
     <div class="fiveDayForecast">
         <div class="fiveDay" id="dayOneDiv">
+            <div id="weekDayOne"></div>
             <div id="dayOne"></div>
             <img src="" id="iconOne">
             <div id="tempOne"></div>
@@ -36,6 +37,7 @@
             <div id="humidityOne"></div>
         </div>
         <div class="fiveDay" id="dayTwoDiv">
+            <div id="weekDayTwo"></div>
             <div id="dayTwo"></div>
             <img src="" id="iconTwo">
             <div id="tempTwo"></div>
@@ -43,6 +45,7 @@
             <div id="humidityTwo"></div>
         </div>        
         <div class="fiveDay" id="dayThreeDiv">
+            <div id="weekDayThree"></div>
             <div id="dayThree"></div>
             <img src="" id="iconThree">
             <div id="tempThree"></div>
@@ -50,6 +53,7 @@
             <div id="humidityThree"></div>
         </div>       
         <div class="fiveDay" id="dayFourDiv">
+            <div id="weekDayFour"></div>
             <div id="dayFour"></div>
             <img src="" id="iconFour">
             <div id="tempFour"></div>
@@ -57,6 +61,7 @@
             <div id="humidityFour"></div>
         </div>
         <div class="fiveDay" id="dayFiveDiv">
+            <div id="weekDayFive"></div>
             <div id="dayFive"></div>
             <img src="" id="iconFive">
             <div id="tempFive"></div>
