fixing saved button not centering

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <button type="submit" class="searchButton">Search</button>
     </header>
     <h4>Previous Searches</h4>
-    <div class="previousSearch">
-        <ul class="previousSearchList"></ul>
-    </div>
+    <div class="previousSearch"></div>
     <h4>Current Forecast</h4>
     <div class="currentForecast">
         <div id="name"></div>
