making more styling changes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h4>Current Forecast</h4>
     <div class="currentForecast">
         <div id="name"></div>
+        <img src="" id="icon">
         <div id="temp"></div>
         <div id="wind"></div>
         <div id="humidity"></div>
