updating for the night, small changes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <h4>Current Forecast</h4>
     <div class="currentForecast">
         <div id="name"></div>
+        <div id="currentDay"></div>
+        <div id="currentDate"></div>
         <img src="" id="icon">
         <div id="temp"></div>
         <div id="wind"></div>
