making changes to styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="name"></div>
         <div id="currentDay"></div>
         <div id="currentDate"></div>
-        <img src="" id="icon">
+        <img src="" class="iconClouds" id="icon">
         <div id="temp"></div>
         <div id="wind"></div>
         <div id="humidity"></div>
@@ -32,7 +32,7 @@
         <div class="fiveDay" id="dayOneDiv">
             <div id="weekDayOne"></div>
             <div id="dayOne"></div>
-            <img src="" id="iconOne">
+            <img src="" class="iconClouds" id="iconOne">
             <div id="tempOne"></div>
             <div id="windOne"></div>
             <div id="humidityOne"></div>
@@ -40,7 +40,7 @@
         <div class="fiveDay" id="dayTwoDiv">
             <div id="weekDayTwo"></div>
             <div id="dayTwo"></div>
-            <img src="" id="iconTwo">
+            <img src="" class="iconClouds" id="iconTwo">
             <div id="tempTwo"></div>
             <div id="windTwo"></div>
             <div id="humidityTwo"></div>
@@ -48,7 +48,7 @@
         <div class="fiveDay" id="dayThreeDiv">
             <div id="weekDayThree"></div>
             <div id="dayThree"></div>
-            <img src="" id="iconThree">
+            <img src="" class="iconClouds" id="iconThree">
             <div id="tempThree"></div>
             <div id="windThree"></div>
             <div id="humidityThree"></div>
@@ -56,7 +56,7 @@
         <div class="fiveDay" id="dayFourDiv">
             <div id="weekDayFour"></div>
             <div id="dayFour"></div>
-            <img src="" id="iconFour">
+            <img src="" class="iconClouds" id="iconFour">
             <div id="tempFour"></div>
             <div id="windFour"></div>
             <div id="humidityFour"></div>
@@ -64,7 +64,7 @@
         <div class="fiveDay" id="dayFiveDiv">
             <div id="weekDayFive"></div>
             <div id="dayFive"></div>
-            <img src="" id="iconFive">
+            <img src="" class="iconClouds" id="iconFive">
             <div id="tempFive"></div>
             <div id="windFive"></div>
             <div id="humidityFive"></div>
