--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dash</title>
+    <title>WeatherDash</title>
     <link href="https://code.jquery.com/ui/1.12.1/themes/ui-darkness/jquery-ui.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="logoDiv">
+      <h3><i class="fas fa-cloud"></i>WeatherDash</h3>
+    </div>
     <header>
         <input type="search" class="locationSearch" placeholder="Search by state, city, or zipcode...">
         <button type="submit" class="searchButton">Search</button>
     </header>
-    <h4>Previous Searches</h4>
+    <h3>Previous Searches</h3>
     <div class="previousSearch"></div>
-    <h4>Current Forecast</h4>
+    <div class="clearDiv"><button type="submit" class="clearButton">Clear Searches</button></div>
+    <h3>Current Forecast For</h3>
     <div class="currentForecast">
         <div id="name"></div>
         <div id="currentDay"></div>
@@ -27,7 +31,7 @@
         <div id="humidity"></div>
         <div id="uv"></div>
     </div>
-    <h4>Five Day Forecast</h4>
+    <h3>Five Day Forecast For</h3>
     <div class="fiveDayForecast">
         <div class="fiveDay" id="dayOneDiv">
             <div id="weekDayOne"></div>
@@ -70,8 +74,9 @@
             <div id="humidityFive"></div>
         </div>
     </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-<script src="assets/js/javascript.js"></script>
+    <script src="https://kit.fontawesome.com/300454e470.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="assets/js/javascript.js"></script>
 </body>
 </html>
