--- a/index.html
+++ b/index.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+<!------------ Head Starts Here ------------>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherDash</title>
-    <link href="https://code.jquery.com/ui/1.12.1/themes/ui-darkness/jquery-ui.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
+<!------------ Body Starts Here ------------>
 <body>
+    <!------------ Logo Div Starts Here ------------>
     <div class="logoDiv">
-      <h3><i class="fas fa-cloud"></i>WeatherDash</h3>
+      <h2><i class="fas fa-cloud"></i>WeatherDash</h2>
     </div>
+    <!------------ Header Starts Here ------------>
     <header>
         <input type="search" class="locationSearch" id="mainInput" placeholder="Search by state, city, or zipcode...">
         <button type="submit" class="searchButton" type="button">Search</button>
     </header>
-    <div class="previousSearch"></div>
-    <div class="clearDiv"><button type="submit" class="clearButton">Clear Searches</button></div>
-    <h3>Current Forecast For <span id="currentSpan"></span></h3>
-    <div class="currentForecast">
-        <div id="name"></div>
-        <div id="currentDay"></div>
-        <div id="currentDate"></div>
-        <img src="" class="iconClouds" id="icon">
-        <div id="temp"></div>
-        <div id="wind"></div>
-        <div id="humidity"></div>
-        <div id="uv"></div>
+    <!------------ Previous Search Div Starts Here ------------>
+    <div class="previousSearch">
+        <div class="clearDiv"><button type="submit" class="clearButton"><i class="fas fa-times"></i></button></div>
     </div>
+    <!------------ Current Forecast Header and Span ------------>
+    <h3>Current Forecast For <span id="currentSpan"></span></h3>
+    <!------------ Current Forecast Div Starts Here ------------>
+    <div class="currentForecast">
+        <div class="currentDivOne">
+            <div id="name"></div>
+            <div id="currentDay"></div>
+            <div id="currentDate"></div>
+        </div>
+        <div class="currentDivTwo">
+            <img src="" class="iconClouds" id="icon">
+        </div>
+        <div class="currentDiveThree">
+            <div id="temp"></div>
+            <div id="wind"></div>
+            <div id="humidity"></div>
+            <div id="uv"></div>
+        </div>
+    </div>
+    <!------------ Five Day Forecast Header and Span ------------>
     <h3>Five Day Forecast For <span id="fiveDaySpan"></span></h3>
+    <!------------ Five Day Forecast Div Starts Here ------------>
     <div class="fiveDayForecast">
         <div class="fiveDay" id="dayOneDiv">
             <div id="weekDayOne"></div>
@@ -73,9 +89,9 @@
             <div id="humidityFive"></div>
         </div>
     </div>
+    <!------------ Scripts Starts Here ------------>
     <script src="https://kit.fontawesome.com/300454e470.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="assets/js/javascript.js"></script>
 </body>
 </html>
