updating input placeholder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <!------------ Header Starts Here ------------>
     <header>
-        <input type="search" class="locationSearch" id="mainInput" placeholder="Search by state, city, or zipcode...">
+        <input type="search" class="locationSearch" id="mainInput" placeholder="Recommended search format: Nashville, TN, USA...">
         <button type="submit" class="searchButton" type="button">Search</button>
     </header>
     <!------------ Previous Search Div Starts Here ------------>
